--- a/01-get-data-by-metro.ipynb
+++ b/01-get-data-by-metro.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "bb745d3b-688a-40db-9e14-b93ca2162d21",
    "metadata": {},
    "outputs": [],
@@ -35,12 +35,13 @@
    "id": "1f61d539-2af7-445e-86e0-2d82b8c2070d",
    "metadata": {},
    "source": [
-    "## Investigate Cities"
+    "## Investigate Cities\n",
+    "### We'll have 2 files that we're working with in this file. 1 is businesses; the second is the reviews from these businesses."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "8af6ad9f-ad3c-4986-aa53-b3ab5397132e",
    "metadata": {},
    "outputs": [
@@ -60,7 +61,7 @@
     }
    ],
    "source": [
-    "businesses = pd.read_csv(\"YelpChallengeWMetros_Clean.csv\")\n",
+    "businesses = pd.read_csv(r\"C:\\Users\\caraca\\Downloads\\YelpChallengeWMetros_Clean.csv\", encoding='latin-1')\n",
     "businesses = businesses.rename(columns={'business': 'business_id'})\n",
     "\n",
     "d = dict(businesses['metroarea'].value_counts())\n",
@@ -72,109 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "9d92d38f-67b4-4641-ba15-4677e99a837f",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>business_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>stars</th>\n",
-       "      <th>review_count</th>\n",
-       "      <th>address</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>metroarea</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>N3_Gs3DnX4k9SgpwJxdEfw</td>\n",
-       "      <td>Lane Wells Jewelry Repair</td>\n",
-       "      <td>Shopping, Jewelry Repair, Appraisal Services, ...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>30</td>\n",
-       "      <td>7801 N Lamar Blvd, Ste A140</td>\n",
-       "      <td>Austin</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>-97.711458</td>\n",
-       "      <td>30.346169</td>\n",
-       "      <td>Austin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NVfOn7TdnHbaGH97CVB_Qg</td>\n",
-       "      <td>McKinley Chiropractic</td>\n",
-       "      <td>Chiropractors, Health &amp; Medical</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5625 Eiger Rd, Ste 160</td>\n",
-       "      <td>Austin</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>-97.857409</td>\n",
-       "      <td>30.244902</td>\n",
-       "      <td>Austin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Xw8tuI30T-xihpzwBV-zJg</td>\n",
-       "      <td>El Pollo Rey</td>\n",
-       "      <td>Food Trucks, Restaurants, Specialty Food, Food...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1725 E Riverside Dr</td>\n",
-       "      <td>Austin</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>-97.730141</td>\n",
-       "      <td>30.243493</td>\n",
-       "      <td>Austin</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              business_id                       name  \\\n",
-       "0  N3_Gs3DnX4k9SgpwJxdEfw  Lane Wells Jewelry Repair   \n",
-       "1  NVfOn7TdnHbaGH97CVB_Qg      McKinley Chiropractic   \n",
-       "2  Xw8tuI30T-xihpzwBV-zJg               El Pollo Rey   \n",
-       "\n",
-       "                                          categories  stars  review_count  \\\n",
-       "0  Shopping, Jewelry Repair, Appraisal Services, ...      5            30   \n",
-       "1                    Chiropractors, Health & Medical      5             5   \n",
-       "2  Food Trucks, Restaurants, Specialty Food, Food...      5            11   \n",
-       "\n",
-       "                       address    city state  longitude   latitude metroarea  \n",
-       "0  7801 N Lamar Blvd, Ste A140  Austin    TX -97.711458  30.346169    Austin  \n",
-       "1       5625 Eiger Rd, Ste 160  Austin    TX -97.857409  30.244902    Austin  \n",
-       "2          1725 E Riverside Dr  Austin    TX -97.730141  30.243493    Austin  "
-      ]
+      "text/plain": "              business_id                       name  \\\n0  N3_Gs3DnX4k9SgpwJxdEfw  Lane Wells Jewelry Repair   \n1  NVfOn7TdnHbaGH97CVB_Qg      McKinley Chiropractic   \n2  Xw8tuI30T-xihpzwBV-zJg               El Pollo Rey   \n\n                                          categories  stars  review_count  \\\n0  Shopping, Jewelry Repair, Appraisal Services, ...      5            30   \n1                    Chiropractors, Health & Medical      5             5   \n2  Food Trucks, Restaurants, Specialty Food, Food...      5            11   \n\n                       address    city state  longitude   latitude metroarea  \n0  7801 N Lamar Blvd, Ste A140  Austin    TX -97.711458  30.346169    Austin  \n1       5625 Eiger Rd, Ste 160  Austin    TX -97.857409  30.244902    Austin  \n2          1725 E Riverside Dr  Austin    TX -97.730141  30.243493    Austin  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>business_id</th>\n      <th>name</th>\n      <th>categories</th>\n      <th>stars</th>\n      <th>review_count</th>\n      <th>address</th>\n      <th>city</th>\n      <th>state</th>\n      <th>longitude</th>\n      <th>latitude</th>\n      <th>metroarea</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>N3_Gs3DnX4k9SgpwJxdEfw</td>\n      <td>Lane Wells Jewelry Repair</td>\n      <td>Shopping, Jewelry Repair, Appraisal Services, ...</td>\n      <td>5</td>\n      <td>30</td>\n      <td>7801 N Lamar Blvd, Ste A140</td>\n      <td>Austin</td>\n      <td>TX</td>\n      <td>-97.711458</td>\n      <td>30.346169</td>\n      <td>Austin</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NVfOn7TdnHbaGH97CVB_Qg</td>\n      <td>McKinley Chiropractic</td>\n      <td>Chiropractors, Health &amp; Medical</td>\n      <td>5</td>\n      <td>5</td>\n      <td>5625 Eiger Rd, Ste 160</td>\n      <td>Austin</td>\n      <td>TX</td>\n      <td>-97.857409</td>\n      <td>30.244902</td>\n      <td>Austin</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Xw8tuI30T-xihpzwBV-zJg</td>\n      <td>El Pollo Rey</td>\n      <td>Food Trucks, Restaurants, Specialty Food, Food...</td>\n      <td>5</td>\n      <td>11</td>\n      <td>1725 E Riverside Dr</td>\n      <td>Austin</td>\n      <td>TX</td>\n      <td>-97.730141</td>\n      <td>30.243493</td>\n      <td>Austin</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "e17092c1-c763-439c-bf45-a34fea665af4",
    "metadata": {},
    "outputs": [
@@ -202,16 +110,8 @@
      "output_type": "stream",
      "text": [
       "Chunk # 0\n",
-      "Chunk # 10\n",
-      "Chunk # 20\n",
-      "Chunk # 30\n",
-      "Chunk # 40\n",
-      "Chunk # 50\n",
-      "Chunk # 60\n",
-      "Chunk # 70\n",
-      "Chunk # 80\n",
-      "End: Chunk # 86\n",
-      "7522592\n"
+      "End: Chunk # 1\n",
+      "123229\n"
      ]
     }
    ],
@@ -227,7 +127,7 @@
     "\n",
     "num_total_reviews = 0\n",
     "\n",
-    "with pd.read_csv(\"yelp_academic_dataset_review.csv\", chunksize=100000) as reader:\n",
+    "with pd.read_csv(r\"C:/Users/caraca/Downloads/yelp_academic_dataset_reviews_Boulder.csv\", chunksize=100000) as reader:\n",
     "    for count, chunk in enumerate(reader):\n",
     "        #####\n",
     "        chunk['datetime'] = pd.to_datetime(chunk['date'])\n",
@@ -245,11 +145,22 @@
     "    print(\"End: Chunk #\", count)\n",
     "\n",
     "print(num_total_reviews)\n",
-    "    \n",
-    "for metro in metros:\n",
-    "    #metro_reviews[metro].to_csv(\"small_reviews/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
-    "    metro_reviews[metro].to_csv(\"small_reviews_urbcomp/yelp_academic_dataset_reviews_\" + metro + \".csv\")"
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "# we're commenting out this line because we only have reviews for one metro - Boulder\n",
+    "# for metro in metros:\n",
+    "#     #metro_reviews[metro].to_csv(\"small_reviews/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
+    "#     metro_reviews[metro].to_csv(\"small_reviews_urbcomp/yelp_academic_dataset_reviews_\" + metro + \".csv\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -261,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "818ea7f4-a16b-4bb9-b128-fa4d08124bf6",
    "metadata": {},
    "outputs": [
@@ -279,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "dd257f05-f72f-4e77-8afe-a10417e80fdf",
    "metadata": {},
    "outputs": [
@@ -287,9 +198,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1731248, 1367612, 1289078, 990606, 987780, 564826, 375874, 123229]\n",
-      "7430253\n",
-      "7522592\n"
+      "[0, 0, 0, 0, 0, 0, 0, 123229]\n",
+      "123229\n",
+      "123229\n"
      ]
     }
    ],
@@ -302,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5bba5577-3171-4b5a-a6c9-0583626d2415",
    "metadata": {},
    "outputs": [],
