--- a/02-do-text-mining.ipynb
+++ b/02-do-text-mining.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "bb745d3b-688a-40db-9e14-b93ca2162d21",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "496706e8-2533-4890-a420-c7756a0a5e55",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "['child,children,kid,kids', 'daughter,daughters', 'son,sons', 'parent,parents', 'mother,mom', 'father,dad', 'brother,brothers', 'sister,sisters', 'siblings', 'aunt,aunts', 'uncle,uncles', 'niece,nieces', 'nephew,nephews', 'cousin,cousins', 'grandchild,grandchildren', 'grandmother,grandma', 'grandfather,grandpa', 'grandparents', 'spouse', 'partner', 'husband', 'wife', 'bff', 'relationship', 'date', 'boo,bae,sweetheart', 'fiancee,fiance', 'girlfriend,gf', 'boyfriend,bf', 'friend,friends,buddy,buddies,pal,pals', 'housemate,housemates,roommate,roommates,flatmate,flatmates', 'neighbor,neighbors', 'classmate,classmates', 'professor,professors', 'teacher,teachers', 'coworker,coworkers,colleague,colleagues', 'client,clients', 'boss']\n",
-      "{'my_grandmother', 'my_niece', 'my_boyfriend', 'my_children', 'my_buddy', 'my_boo', 'my_date', 'my_daughter', 'my_fiancee', 'my_sisters', 'my_nieces', 'my_sister', 'my_friends', 'my_daughters', 'my_mother', 'my_roommates', 'our_child', 'my_grandchildren', 'my_siblings', 'my_client', 'my_grandma', 'my_grandchild', 'my_clients', 'my_relationship', 'my_flatmates', 'my_brothers', 'my_friend', 'my_uncles', 'my_wife', 'my_dad', 'my_neighbors', 'my_housemate', 'my_partner', 'my_flatmate', 'my_kids', 'my_pals', 'our_son', 'my_boss', 'my_nephews', 'my_bff', 'my_parents', 'my_coworkers', 'my_mom', 'my_colleagues', 'my_grandfather', 'my_spouse', 'my_colleague', 'my_uncle', 'my_housemates', 'my_aunts', 'my_girlfriend', 'my_pal', 'my_gf', 'our_daughters', 'my_parent', 'my_cousin', 'my_bae', 'my_professor', 'my_coworker', 'my_child', 'my_teacher', 'my_teachers', 'my_cousins', 'my_aunt', 'our_daughter', 'my_fiance', 'my_father', 'our_children', 'our_kid', 'my_sons', 'our_sons', 'my_neighbor', 'my_kid', 'my_nephew', 'my_grandparents', 'my_classmates', 'my_grandpa', 'my_brother', 'my_classmate', 'my_son', 'my_professors', 'my_bf', 'my_buddies', 'my_husband', 'my_sweetheart', 'my_roommate', 'our_kids'}\n"
+      "{'my_kids', 'our_kid', 'our_kids', 'my_grandparents', 'my_son', 'my_relationship', 'my_roommates', 'my_neighbors', 'my_housemates', 'our_children', 'our_daughters', 'my_husband', 'my_kid', 'my_girlfriend', 'my_pals', 'my_boss', 'my_professor', 'my_brothers', 'my_bff', 'my_classmate', 'my_boyfriend', 'my_clients', 'my_uncle', 'my_colleagues', 'our_child', 'my_roommate', 'my_dad', 'my_coworker', 'my_housemate', 'my_teacher', 'my_sons', 'my_professors', 'my_client', 'my_parents', 'my_classmates', 'my_father', 'my_wife', 'my_sisters', 'my_daughter', 'my_gf', 'my_grandmother', 'my_bae', 'my_niece', 'our_son', 'my_cousins', 'my_siblings', 'my_nieces', 'my_flatmate', 'my_friends', 'my_partner', 'my_neighbor', 'my_friend', 'my_fiance', 'my_brother', 'my_colleague', 'my_nephews', 'my_mother', 'my_buddies', 'my_coworkers', 'my_grandpa', 'my_sister', 'my_child', 'my_cousin', 'my_flatmates', 'my_sweetheart', 'my_pal', 'my_parent', 'my_aunt', 'my_bf', 'my_spouse', 'my_mom', 'my_grandma', 'my_grandchildren', 'my_date', 'my_aunts', 'my_buddy', 'my_boo', 'our_sons', 'my_nephew', 'my_daughters', 'my_uncles', 'my_grandchild', 'our_daughter', 'my_grandfather', 'my_teachers', 'my_fiancee', 'my_children'}\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
     "# 2) Allows arbitrary groupings of relationships beyond stemming equivalence\n",
     "#    (e.g. \"roommate\" and \"housemate\", \"children\" and \"kids\", etc.)\n",
     "\n",
-    "with open(\"relationships/Relationships_ATUS_custom_v2.txt\") as f:\n",
+    "with open(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/relationships/Relationships_ATUS_custom_v2.txt\") as f:\n",
     "    relationships = [line.strip().lower() for line in f.readlines()]\n",
     "\n",
     "relationships_dict = dict()  ## From relationship category to all relevant relationship words, e.g. \"spouse\" --> [\"spouse\", \"partner\"]\n",
@@ -97,27 +97,31 @@
    "id": "709f0557-bdf0-4157-a114-103d81e54f29",
    "metadata": {},
    "source": [
-    "## Text Mining"
+    "## Text Mining\n",
+    "### Note that for the purposes of this exercise, we're just going to use the Boulder data set. No need to iterate through the metro areas, so we're going to explicitly read in the Boulder csv."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "6ccfe00f-583f-4c30-8f76-a4cae42e8f1d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "#metros = ['Boston', 'Portland', 'Austin', 'Orlando', 'Atlanta', 'Vancouver', 'Columbus', 'Boulder']\n",
     "\n",
-    "metro = 'Vancouver'\n",
+    "# metro = 'Vancouver'\n",
     "# metro_reviews = pd.read_csv(\"small_reviews/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
-    "metro_reviews = pd.read_csv(\"small_reviews_urbcomp/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
-    "#metro_reviews.head(3)"
+    "# metro_reviews = pd.read_csv(\"small_reviews_urbcomp/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
+    "#metro_reviews.head(3)\n",
+    "metro_reviews = pd.read_csv(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/small_reviews_urbcomp/yelp_academic_dataset_reviews_Boulder.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "354d2a4b-55f2-4ef2-a409-a7ae9f62017c",
    "metadata": {},
    "outputs": [
@@ -125,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.25587010383606 sec\n"
+      "4.882421255111694 sec\n"
      ]
     }
    ],
@@ -135,6 +139,7 @@
     "# Clean review text by making everything lowercase\n",
     "metro_reviews[\"text_clean\"] = metro_reviews[\"text\"].str.lower()\n",
     "\n",
+    "#note that the words that cue a relationship are ---my--- & ---our---\n",
     "metro_reviews[\"text_clean\"] = metro_reviews[\"text_clean\"].str.replace(\"my \", \"my_\")\n",
     "metro_reviews[\"text_clean\"] = metro_reviews[\"text_clean\"].str.replace(\"our \", \"our_\")\n",
     "\n",
@@ -157,118 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "721ad0a3-f7eb-467b-8321-aab814100df3",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>funny</th>\n",
-       "      <th>useful</th>\n",
-       "      <th>review_id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>business_id</th>\n",
-       "      <th>stars</th>\n",
-       "      <th>date</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>cool</th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>text_clean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>LBJJWJ0uNlIybMfPnQGS0A</td>\n",
-       "      <td>I loved everything about this place. I've only...</td>\n",
-       "      <td>6Hm2FmfLcU_M91TrZI5htA</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2014-02-05 21:09:05</td>\n",
-       "      <td>bUHweiErUJ36WGeNrPmEbA</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2014-02-05 21:09:05</td>\n",
-       "      <td>time an though siouxsie went were get service ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ucFOnqgaV40oQ2YNyz5ddQ</td>\n",
-       "      <td>Great coffee and pastries. Baristas are excell...</td>\n",
-       "      <td>KXCXaF5qimmtKKqnPc_LQA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2018-03-03 23:45:25</td>\n",
-       "      <td>JHXQEayrDHOWGexs0dCviA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2018-03-03 23:45:25</td>\n",
-       "      <td>and pastries are vacant the great all sooooo b...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1OsubwE6zKNU1fkBGxOFrQ</td>\n",
-       "      <td>Ordered the original tonkotsu base ramen and a...</td>\n",
-       "      <td>jMz_y_-cWMfiZF7Q5snE6Q</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2016-01-30 02:39:22</td>\n",
-       "      <td>vFnYYmtVwcMGyyGesNImVQ</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-01-30 02:39:22</td>\n",
-       "      <td>bowl ppl high exit soup old outside my_next ca...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  funny  useful               review_id  \\\n",
-       "0          16      3       5  LBJJWJ0uNlIybMfPnQGS0A   \n",
-       "1          17      0       0  ucFOnqgaV40oQ2YNyz5ddQ   \n",
-       "2          22      0       0  1OsubwE6zKNU1fkBGxOFrQ   \n",
-       "\n",
-       "                                                text             business_id  \\\n",
-       "0  I loved everything about this place. I've only...  6Hm2FmfLcU_M91TrZI5htA   \n",
-       "1  Great coffee and pastries. Baristas are excell...  KXCXaF5qimmtKKqnPc_LQA   \n",
-       "2  Ordered the original tonkotsu base ramen and a...  jMz_y_-cWMfiZF7Q5snE6Q   \n",
-       "\n",
-       "   stars                 date                 user_id  cool  \\\n",
-       "0    5.0  2014-02-05 21:09:05  bUHweiErUJ36WGeNrPmEbA     3   \n",
-       "1    1.0  2018-03-03 23:45:25  JHXQEayrDHOWGexs0dCviA     0   \n",
-       "2    5.0  2016-01-30 02:39:22  vFnYYmtVwcMGyyGesNImVQ     0   \n",
-       "\n",
-       "              datetime                                         text_clean  \n",
-       "0  2014-02-05 21:09:05  time an though siouxsie went were get service ...  \n",
-       "1  2018-03-03 23:45:25  and pastries are vacant the great all sooooo b...  \n",
-       "2  2016-01-30 02:39:22  bowl ppl high exit soup old outside my_next ca...  "
-      ]
+      "text/plain": "   Unnamed: 0  funny  useful               review_id  \\\n0           4      0       0  sjm_uUcQVxab_EeLCqsYLg   \n1          53      0       0  eiAeuhR3kurAO8rAt_rhlg   \n2         185      0       0  tanL1f9UuVPE2veDDHAL-w   \n\n                                                text             business_id  \\\n0  The food is always great here. The service fro...  8zehGz9jnxPqXtOc7KaJxA   \n1  Brasserie zero zero... we were hoping for a te...  8zehGz9jnxPqXtOc7KaJxA   \n2  Excellent subs at a reasonable price. A huge v...  i9BDFBYcl_PGqrLbQUdMvg   \n\n   stars                 date                 user_id  cool  \\\n0    4.0  2011-07-28 18:05:01  0kA0PAJ8QFMeveQWHFqz2A     0   \n1    2.0  2018-08-04 20:52:32  7zEJt0NVl-lMiMwkCsvteg     0   \n2    4.0  2016-06-22 05:13:56  h_kjYBpubAmYVxvNaID7Lw     0   \n\n              datetime                                         text_clean  \n0  2011-07-28 18:05:01  if only can of from you is service back patio ...  \n1  2018-08-04 20:52:32  of disappointing even size mustard tough start...  \n2  2016-06-22 05:13:56  can decide of ranch those and reasonable huge ...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>funny</th>\n      <th>useful</th>\n      <th>review_id</th>\n      <th>text</th>\n      <th>business_id</th>\n      <th>stars</th>\n      <th>date</th>\n      <th>user_id</th>\n      <th>cool</th>\n      <th>datetime</th>\n      <th>text_clean</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>sjm_uUcQVxab_EeLCqsYLg</td>\n      <td>The food is always great here. The service fro...</td>\n      <td>8zehGz9jnxPqXtOc7KaJxA</td>\n      <td>4.0</td>\n      <td>2011-07-28 18:05:01</td>\n      <td>0kA0PAJ8QFMeveQWHFqz2A</td>\n      <td>0</td>\n      <td>2011-07-28 18:05:01</td>\n      <td>if only can of from you is service back patio ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>53</td>\n      <td>0</td>\n      <td>0</td>\n      <td>eiAeuhR3kurAO8rAt_rhlg</td>\n      <td>Brasserie zero zero... we were hoping for a te...</td>\n      <td>8zehGz9jnxPqXtOc7KaJxA</td>\n      <td>2.0</td>\n      <td>2018-08-04 20:52:32</td>\n      <td>7zEJt0NVl-lMiMwkCsvteg</td>\n      <td>0</td>\n      <td>2018-08-04 20:52:32</td>\n      <td>of disappointing even size mustard tough start...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>185</td>\n      <td>0</td>\n      <td>0</td>\n      <td>tanL1f9UuVPE2veDDHAL-w</td>\n      <td>Excellent subs at a reasonable price. A huge v...</td>\n      <td>i9BDFBYcl_PGqrLbQUdMvg</td>\n      <td>4.0</td>\n      <td>2016-06-22 05:13:56</td>\n      <td>h_kjYBpubAmYVxvNaID7Lw</td>\n      <td>0</td>\n      <td>2016-06-22 05:13:56</td>\n      <td>can decide of ranch those and reasonable huge ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "9840c6d1-081b-4fb3-8c56-525259962066",
    "metadata": {},
    "outputs": [
@@ -287,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "475.2689027786255 sec\n"
+      "18.887014627456665 sec\n"
      ]
     }
    ],
@@ -335,24 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "9d8c5d18-7e8b-4fd9-b640-0f27cf4916fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "relationship_df.to_csv(\"output_urbcomp/\" + metro + \"_counts_v2.csv\", index=False)\n",
-    "relationship_df_ungroup.to_csv(\"output_urbcomp/\" + metro + \"_counts_ungrouped_v2.csv\", index=False)\n",
+    "relationship_df.to_csv(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/output_urbcomp/699counts_v2.csv\", index=False)\n",
+    "relationship_df_ungroup.to_csv(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/output_urbcomp/699counts_ungrouped_v2.csv\", index=False)\n",
     "# relationship_df.to_csv(\"output/\" + metro + \"_counts_v2.csv\", index=False)\n",
     "# relationship_df_ungroup.to_csv(\"output/\" + metro + \"_counts_ungrouped_v2.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738c8fea-883e-415a-b739-aa279a6523ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
