--- a/02-do-text-mining.ipynb
+++ b/02-do-text-mining.ipynb
@@ -13,12 +13,12 @@
    "id": "42261544-9cf9-459b-9c7a-2e7ad7929c59",
    "metadata": {},
    "source": [
-    "## Load Packages"
+    "## 2.0. Load Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "bb745d3b-688a-40db-9e14-b93ca2162d21",
    "metadata": {},
    "outputs": [],
@@ -35,12 +35,12 @@
    "id": "d9c151a2-e67f-45f4-8bed-de4ad750a63d",
    "metadata": {},
    "source": [
-    "## Load & Process Relationship Types"
+    "## 2.1. Load & Process Relationship Types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "496706e8-2533-4890-a420-c7756a0a5e55",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "['child,children,kid,kids', 'daughter,daughters', 'son,sons', 'parent,parents', 'mother,mom', 'father,dad', 'brother,brothers', 'sister,sisters', 'siblings', 'aunt,aunts', 'uncle,uncles', 'niece,nieces', 'nephew,nephews', 'cousin,cousins', 'grandchild,grandchildren', 'grandmother,grandma', 'grandfather,grandpa', 'grandparents', 'spouse', 'partner', 'husband', 'wife', 'bff', 'relationship', 'date', 'boo,bae,sweetheart', 'fiancee,fiance', 'girlfriend,gf', 'boyfriend,bf', 'friend,friends,buddy,buddies,pal,pals', 'housemate,housemates,roommate,roommates,flatmate,flatmates', 'neighbor,neighbors', 'classmate,classmates', 'professor,professors', 'teacher,teachers', 'coworker,coworkers,colleague,colleagues', 'client,clients', 'boss']\n",
-      "{'my_kids', 'our_kid', 'our_kids', 'my_grandparents', 'my_son', 'my_relationship', 'my_roommates', 'my_neighbors', 'my_housemates', 'our_children', 'our_daughters', 'my_husband', 'my_kid', 'my_girlfriend', 'my_pals', 'my_boss', 'my_professor', 'my_brothers', 'my_bff', 'my_classmate', 'my_boyfriend', 'my_clients', 'my_uncle', 'my_colleagues', 'our_child', 'my_roommate', 'my_dad', 'my_coworker', 'my_housemate', 'my_teacher', 'my_sons', 'my_professors', 'my_client', 'my_parents', 'my_classmates', 'my_father', 'my_wife', 'my_sisters', 'my_daughter', 'my_gf', 'my_grandmother', 'my_bae', 'my_niece', 'our_son', 'my_cousins', 'my_siblings', 'my_nieces', 'my_flatmate', 'my_friends', 'my_partner', 'my_neighbor', 'my_friend', 'my_fiance', 'my_brother', 'my_colleague', 'my_nephews', 'my_mother', 'my_buddies', 'my_coworkers', 'my_grandpa', 'my_sister', 'my_child', 'my_cousin', 'my_flatmates', 'my_sweetheart', 'my_pal', 'my_parent', 'my_aunt', 'my_bf', 'my_spouse', 'my_mom', 'my_grandma', 'my_grandchildren', 'my_date', 'my_aunts', 'my_buddy', 'my_boo', 'our_sons', 'my_nephew', 'my_daughters', 'my_uncles', 'my_grandchild', 'our_daughter', 'my_grandfather', 'my_teachers', 'my_fiancee', 'my_children'}\n"
+      "{'my_aunt', 'our_daughter', 'my_son', 'my_father', 'my_bf', 'my_parents', 'my_cousins', 'my_parent', 'our_sons', 'my_buddies', 'my_fiance', 'my_brothers', 'my_grandpa', 'my_sister', 'my_classmates', 'our_daughters', 'my_client', 'our_child', 'my_pals', 'my_brother', 'my_gf', 'my_children', 'my_housemates', 'my_kid', 'my_teachers', 'my_coworkers', 'our_kids', 'my_grandma', 'my_housemate', 'my_sisters', 'my_nephew', 'my_relationship', 'my_professors', 'my_sons', 'my_buddy', 'our_kid', 'my_teacher', 'our_children', 'my_roommate', 'my_girlfriend', 'my_uncles', 'my_kids', 'my_siblings', 'my_bae', 'my_fiancee', 'my_uncle', 'my_flatmates', 'my_professor', 'my_aunts', 'my_child', 'my_mom', 'my_grandmother', 'my_husband', 'my_wife', 'my_classmate', 'my_boss', 'my_colleagues', 'my_boo', 'my_sweetheart', 'my_colleague', 'my_grandchildren', 'my_grandfather', 'my_grandchild', 'my_nieces', 'my_neighbors', 'my_daughters', 'my_date', 'my_dad', 'my_friends', 'my_daughter', 'my_partner', 'my_mother', 'my_bff', 'my_niece', 'my_coworker', 'my_pal', 'my_neighbor', 'my_grandparents', 'my_spouse', 'my_roommates', 'my_friend', 'my_boyfriend', 'our_son', 'my_clients', 'my_flatmate', 'my_nephews', 'my_cousin'}\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
     "# 2) Allows arbitrary groupings of relationships beyond stemming equivalence\n",
     "#    (e.g. \"roommate\" and \"housemate\", \"children\" and \"kids\", etc.)\n",
     "\n",
-    "with open(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/relationships/Relationships_ATUS_custom_v2.txt\") as f:\n",
+    "with open(r\"relationships/Relationships_ATUS_custom_v2.txt\") as f:\n",
     "    relationships = [line.strip().lower() for line in f.readlines()]\n",
     "\n",
     "relationships_dict = dict()  ## From relationship category to all relevant relationship words, e.g. \"spouse\" --> [\"spouse\", \"partner\"]\n",
@@ -97,26 +97,24 @@
    "id": "709f0557-bdf0-4157-a114-103d81e54f29",
    "metadata": {},
    "source": [
-    "## Text Mining\n",
-    "### Note that for the purposes of this exercise, we're just going to use the Boulder data set. No need to iterate through the metro areas, so we're going to explicitly read in the Boulder csv."
+    "## 2.2. Text Mining\n",
+    "### Note that for the purposes of this exercise, we're just going to use the Boulder data set for text mining and processing counts. No need to iterate through the metro areas, so we're going to explicitly read in the Boulder csv."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "6ccfe00f-583f-4c30-8f76-a4cae42e8f1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "#metros = ['Boston', 'Portland', 'Austin', 'Orlando', 'Atlanta', 'Vancouver', 'Columbus', 'Boulder']\n",
     "\n",
     "# metro = 'Vancouver'\n",
     "# metro_reviews = pd.read_csv(\"small_reviews/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
     "# metro_reviews = pd.read_csv(\"small_reviews_urbcomp/yelp_academic_dataset_reviews_\" + metro + \".csv\")\n",
     "#metro_reviews.head(3)\n",
-    "metro_reviews = pd.read_csv(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/small_reviews_urbcomp/yelp_academic_dataset_reviews_Boulder.csv\")"
+    "metro_reviews = pd.read_csv(r\"small_reviews_urbcomp/yelp_academic_dataset_reviews_Boulder.csv\")"
    ]
   },
   {
@@ -168,8 +166,110 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "   Unnamed: 0  funny  useful               review_id  \\\n0           4      0       0  sjm_uUcQVxab_EeLCqsYLg   \n1          53      0       0  eiAeuhR3kurAO8rAt_rhlg   \n2         185      0       0  tanL1f9UuVPE2veDDHAL-w   \n\n                                                text             business_id  \\\n0  The food is always great here. The service fro...  8zehGz9jnxPqXtOc7KaJxA   \n1  Brasserie zero zero... we were hoping for a te...  8zehGz9jnxPqXtOc7KaJxA   \n2  Excellent subs at a reasonable price. A huge v...  i9BDFBYcl_PGqrLbQUdMvg   \n\n   stars                 date                 user_id  cool  \\\n0    4.0  2011-07-28 18:05:01  0kA0PAJ8QFMeveQWHFqz2A     0   \n1    2.0  2018-08-04 20:52:32  7zEJt0NVl-lMiMwkCsvteg     0   \n2    4.0  2016-06-22 05:13:56  h_kjYBpubAmYVxvNaID7Lw     0   \n\n              datetime                                         text_clean  \n0  2011-07-28 18:05:01  if only can of from you is service back patio ...  \n1  2018-08-04 20:52:32  of disappointing even size mustard tough start...  \n2  2016-06-22 05:13:56  can decide of ranch those and reasonable huge ...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>funny</th>\n      <th>useful</th>\n      <th>review_id</th>\n      <th>text</th>\n      <th>business_id</th>\n      <th>stars</th>\n      <th>date</th>\n      <th>user_id</th>\n      <th>cool</th>\n      <th>datetime</th>\n      <th>text_clean</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>sjm_uUcQVxab_EeLCqsYLg</td>\n      <td>The food is always great here. The service fro...</td>\n      <td>8zehGz9jnxPqXtOc7KaJxA</td>\n      <td>4.0</td>\n      <td>2011-07-28 18:05:01</td>\n      <td>0kA0PAJ8QFMeveQWHFqz2A</td>\n      <td>0</td>\n      <td>2011-07-28 18:05:01</td>\n      <td>if only can of from you is service back patio ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>53</td>\n      <td>0</td>\n      <td>0</td>\n      <td>eiAeuhR3kurAO8rAt_rhlg</td>\n      <td>Brasserie zero zero... we were hoping for a te...</td>\n      <td>8zehGz9jnxPqXtOc7KaJxA</td>\n      <td>2.0</td>\n      <td>2018-08-04 20:52:32</td>\n      <td>7zEJt0NVl-lMiMwkCsvteg</td>\n      <td>0</td>\n      <td>2018-08-04 20:52:32</td>\n      <td>of disappointing even size mustard tough start...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>185</td>\n      <td>0</td>\n      <td>0</td>\n      <td>tanL1f9UuVPE2veDDHAL-w</td>\n      <td>Excellent subs at a reasonable price. A huge v...</td>\n      <td>i9BDFBYcl_PGqrLbQUdMvg</td>\n      <td>4.0</td>\n      <td>2016-06-22 05:13:56</td>\n      <td>h_kjYBpubAmYVxvNaID7Lw</td>\n      <td>0</td>\n      <td>2016-06-22 05:13:56</td>\n      <td>can decide of ranch those and reasonable huge ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>text_clean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sjm_uUcQVxab_EeLCqsYLg</td>\n",
+       "      <td>The food is always great here. The service fro...</td>\n",
+       "      <td>8zehGz9jnxPqXtOc7KaJxA</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2011-07-28 18:05:01</td>\n",
+       "      <td>0kA0PAJ8QFMeveQWHFqz2A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2011-07-28 18:05:01</td>\n",
+       "      <td>if only can of from you is service back patio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>eiAeuhR3kurAO8rAt_rhlg</td>\n",
+       "      <td>Brasserie zero zero... we were hoping for a te...</td>\n",
+       "      <td>8zehGz9jnxPqXtOc7KaJxA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2018-08-04 20:52:32</td>\n",
+       "      <td>7zEJt0NVl-lMiMwkCsvteg</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2018-08-04 20:52:32</td>\n",
+       "      <td>of disappointing even size mustard tough start...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>185</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>tanL1f9UuVPE2veDDHAL-w</td>\n",
+       "      <td>Excellent subs at a reasonable price. A huge v...</td>\n",
+       "      <td>i9BDFBYcl_PGqrLbQUdMvg</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2016-06-22 05:13:56</td>\n",
+       "      <td>h_kjYBpubAmYVxvNaID7Lw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-06-22 05:13:56</td>\n",
+       "      <td>can decide of ranch those and reasonable huge ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  funny  useful               review_id  \\\n",
+       "0           4      0       0  sjm_uUcQVxab_EeLCqsYLg   \n",
+       "1          53      0       0  eiAeuhR3kurAO8rAt_rhlg   \n",
+       "2         185      0       0  tanL1f9UuVPE2veDDHAL-w   \n",
+       "\n",
+       "                                                text             business_id  \\\n",
+       "0  The food is always great here. The service fro...  8zehGz9jnxPqXtOc7KaJxA   \n",
+       "1  Brasserie zero zero... we were hoping for a te...  8zehGz9jnxPqXtOc7KaJxA   \n",
+       "2  Excellent subs at a reasonable price. A huge v...  i9BDFBYcl_PGqrLbQUdMvg   \n",
+       "\n",
+       "   stars                 date                 user_id  cool  \\\n",
+       "0    4.0  2011-07-28 18:05:01  0kA0PAJ8QFMeveQWHFqz2A     0   \n",
+       "1    2.0  2018-08-04 20:52:32  7zEJt0NVl-lMiMwkCsvteg     0   \n",
+       "2    4.0  2016-06-22 05:13:56  h_kjYBpubAmYVxvNaID7Lw     0   \n",
+       "\n",
+       "              datetime                                         text_clean  \n",
+       "0  2011-07-28 18:05:01  if only can of from you is service back patio ...  \n",
+       "1  2018-08-04 20:52:32  of disappointing even size mustard tough start...  \n",
+       "2  2016-06-22 05:13:56  can decide of ranch those and reasonable huge ...  "
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -243,8 +343,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relationship_df.to_csv(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/output_urbcomp/699counts_v2.csv\", index=False)\n",
-    "relationship_df_ungroup.to_csv(r\"C:/Users/caraca/Downloads/yelp-relationships-geography-main/output_urbcomp/699counts_ungrouped_v2.csv\", index=False)\n",
+    "relationship_df.to_csv(r\"output_urbcomp/699counts_v2.csv\", index=False)\n",
+    "relationship_df_ungroup.to_csv(r\"output_urbcomp/699counts_ungrouped_v2.csv\", index=False)\n",
     "# relationship_df.to_csv(\"output/\" + metro + \"_counts_v2.csv\", index=False)\n",
     "# relationship_df_ungroup.to_csv(\"output/\" + metro + \"_counts_ungrouped_v2.csv\", index=False)"
    ]
@@ -266,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
