--- a/01-get-data-by-metro.ipynb
+++ b/01-get-data-by-metro.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4842f8e7-7aa5-4878-b31e-eb3fe298c203",
    "metadata": {},
    "source": [
     "# Get Data by Metro Area"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42261544-9cf9-459b-9c7a-2e7ad7929c59",
    "metadata": {},
    "source": [
     "## 1.0. Load Packages"
@@ -18,8 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bb745d3b-688a-40db-9e14-b93ca2162d21",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +29,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f61d539-2af7-445e-86e0-2d82b8c2070d",
    "metadata": {},
    "source": [
     "## 1.1. Investigate Cities\n",
@@ -41,8 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8af6ad9f-ad3c-4986-aa53-b3ab5397132e",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9d92d38f-67b4-4641-ba15-4677e99a837f",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +107,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>N3_Gs3DnX4k9SgpwJxdEfw</td>\n",
        "      <td>Lane Wells Jewelry Repair</td>\n",
        "      <td>Shopping, Jewelry Repair, Appraisal Services, ...</td>\n",
@@ -127,7 +121,7 @@
        "      <td>Austin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>NVfOn7TdnHbaGH97CVB_Qg</td>\n",
        "      <td>McKinley Chiropractic</td>\n",
        "      <td>Chiropractors, Health &amp; Medical</td>\n",
@@ -141,7 +135,7 @@
        "      <td>Austin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Xw8tuI30T-xihpzwBV-zJg</td>\n",
        "      <td>El Pollo Rey</td>\n",
        "      <td>Food Trucks, Restaurants, Specialty Food, Food...</td>\n",
@@ -175,7 +169,7 @@
        "2          1725 E Riverside Dr  Austin    TX -97.730141  30.243493    Austin  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73911cb-b0fc-47f2-8583-3c9e2bdf5055",
    "metadata": {},
    "source": [
     "## 1.2. Dataset for Each Metro\n",
@@ -196,8 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e17092c1-c763-439c-bf45-a34fea665af4",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,20 +227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81aff36e",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create_metro_csvs()"
-   ]
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'num_total_reviews' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-ba4fbad53a61>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnum_total_reviews\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'num_total_reviews' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# we're commenting out this line because we only have reviews for one metro - Boulder\n",
@@ -259,7 +258,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f88cdb-6cb0-46ac-8be6-c6ea9f03f9b3",
    "metadata": {},
    "source": [
     "## Checking Results"
@@ -268,7 +266,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "818ea7f4-a16b-4bb9-b128-fa4d08124bf6",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +283,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dd257f05-f72f-4e77-8afe-a10417e80fdf",
    "metadata": {},
    "outputs": [
     {
@@ -305,14 +301,6 @@
     "print(sum(lengths))\n",
     "print(num_total_reviews)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5bba5577-3171-4b5a-a6c9-0583626d2415",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -331,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
